subida archivos finales

--- a/producto2.html
+++ b/producto2.html
@@ -8,17 +8,23 @@
     <title>PANTALON ROTO</title>
 </head>
 <body class="center">
-    <header>
-        <img class="logo" src="img/pelle logo.png" alt="foto logo">
+  <header>
+    <div class="contenedor">
+    <img class="logo" src="img/pelle logo.png" alt="foto logo">
+    
+    <input type="checkbox" id="menu-check">
+    <label id="menu" for="menu-check">
+        <span id="menu-abrir">&#9776;</span>
+        <span id="menu-cerrar">x</span>
+    </label>
         <nav>
-            <input class="hamburguesa" type="checkbox" id="menu">
-            <label for="menu">☰</label>
-            <ul>
-                <li><a class="none" href="index.html">INCIO</a></li>
-                <li><a class="none" href="productos.html">PRODUCTOS</a></li>
-            </ul>
-        </nav>
-    </header>
+        <ul>
+            <li><a class="none" href="index.html">INCIO</a></li>
+            <li><a class="none" href="productos.html">PRODUCTOS</a></li>
+        </ul>
+    </nav>
+    </div>
+</header>
 
     <h1>PANTALON ANCHO ROTO</h1>
 
