--- a/productos.html
+++ b/productos.html
@@ -9,15 +9,21 @@
 </head>
 <body class="center">
     <header>
+        <div class="contenedor">
         <img class="logo" src="img/pelle logo.png" alt="foto logo">
-        <nav>
-            <input class="hamburguesa" type="checkbox" id="menu">
-            <label for="menu">☰</label>
+        
+        <input type="checkbox" id="menu-check">
+        <label id="menu" for="menu-check">
+            <span id="menu-abrir">&#9776;</span>
+            <span id="menu-cerrar">x</span>
+        </label>
+            <nav>
             <ul>
                 <li><a class="none" href="index.html">INCIO</a></li>
                 <li><a class="none" href="productos.html">PRODUCTOS</a></li>
             </ul>
         </nav>
+        </div>
     </header>
 
     <h1>PRODUCTOS</h1>
